# doc-hop

./: README.md  setup.py
code/geographic/: conversion  conversion.py  vectorize.py
code/infrasound/: signal_processing.py
code/linux-setup/: git_setup.sh  miniconda_setup.sh
code/plotting/: animation.py
doc-hop/file-parsing/: directory_space_stripping.py
doc-hop/point-clouds/: merging.py
thehopper/: setup_dochop.sh
thehopper/file-parsing/: command_line.py  pathlib_helpers
thehopper/geographic/: constants.py  (+3 more)
thehopper/parralel/PA1/: CMakeLists.txt  README.md  buildProject.sh
thehopper/parralel/PA1/include/: pi_leibniz.h  pi_mc.h  utilities.h
thehopper/parralel/PA1/slurms/: fib.slurm  pi_leibniz.slurm  pi_mc.slurm
thehopper/parralel/PA1/src/: fib.cpp  fib_driver.cpp  matrix_mul_driver.cpp  matrix_vector_mul_driver.cpp  pi_leibniz.cpp  pi_leibniz_driver.cpp  pi_mc.cpp  pi_mc_driver.cpp  utilities.cpp
thehopper/parralel/PA1/tests/: Fibtest.cpp  MatrixMultiplyTests.cpp  MatrixVectorMultiplyTests.cpp  PiTests.cpp
thehopper/parralel/PA1/tests/test_files/Matrices/: mm3_4x4  mm4_3x3
thehopper/parralel/PA1/tests/test_files/Vectors/: 5_1_Solution
thehopper/parralel/PA2/: CMakeLists.txt  README.md  buildProject.sh  test.sh
thehopper/parralel/PA2/etc/: matrixBenchmark.sh  matrixVectTest.sh  matrixmatrix.txt  matrixvect.txt  timing.slurm
thehopper/parralel/PA2/etc/MatrixBuilds/: RunMatrixTests_12.sh
thehopper/parralel/PA2/etc/MatrixBuilds/12_threads/: 1000x1000.sh  100x100.sh  10x10.sh  20x20.sh  4x4.sh  50x50.sh  5x5.sh
thehopper/parralel/PA2/etc/MatrixBuilds/16_threads/: 1000x1000.sh  100x100.sh  10x10.sh  20x20.sh  4x4.sh  50x50.sh  5x5.sh
thehopper/parralel/PA2/etc/MatrixBuilds/20_threads/: 1000x1000.sh  100x100.sh  10x10.sh  20x20.sh  4x4.sh  50x50.sh  5x5.sh
thehopper/parralel/PA2/etc/MatrixBuilds/28_threads/: 1000x1000.sh  100x100.sh  10x10.sh  20x20.sh  4x4.sh  50x50.sh  5x5.sh
thehopper/parralel/PA2/etc/MatrixBuilds/2_threads/: 1000x1000.sh  100x100.sh  10x10.sh  20x20.sh  4x4.sh  50x50.sh  5x5.sh
thehopper/parralel/PA2/etc/MatrixBuilds/4_threads/: 1000x1000.sh  100x100.sh  10x10.sh  20x20.sh  4x4.sh  50x50.sh  5x5.sh
thehopper/parralel/PA2/etc/MatrixBuilds/8_threads/: 1000x1000.sh  100x100.sh  10x10.sh  20x20.sh  4x4.sh  50x50.sh  5x5.sh
thehopper/parralel/PA2/etc/Matrix_Benchmarks/: RunMatrixTests_2.sh  RunMatrixTests_20.sh  RunMatrixTests_28.sh  RunMatrixTests_4.sh  RunMatrixTests_8.sh
thehopper/parralel/PA2/etc/Matrix_Benchmarks/12_threads/: large.sh  medium.sh  small.sh
thehopper/parralel/PA2/etc/Matrix_Benchmarks/16_threads/: large.sh  medium.sh  small.sh
thehopper/parralel/PA2/etc/Matrix_Benchmarks/20_threads/: large.sh  medium.sh  small.sh
thehopper/parralel/PA2/etc/Matrix_Benchmarks/28_threads/: large.sh  medium.sh  small.sh
thehopper/parralel/PA2/etc/Matrix_Benchmarks/2_threads/: large.sh  medium.sh  small.sh
thehopper/parralel/PA2/etc/Matrix_Benchmarks/4_threads/: large.sh  medium.sh  small.sh
thehopper/parralel/PA2/etc/Matrix_Benchmarks/8_threads/: large.sh  medium.sh  small.sh
thehopper/parralel/PA2/etc/VectorBuilds/: RunMatrixTests_16.sh
thehopper/parralel/PA2/etc/VectorBuilds/12_threads/: large.sh  medium.sh  small.sh
thehopper/parralel/PA2/etc/VectorBuilds/16_threads/: large.sh  medium.sh  small.sh
thehopper/parralel/PA2/etc/VectorBuilds/20_threads/: large.sh  medium.sh  small.sh
thehopper/parralel/PA2/etc/VectorBuilds/28_threads/: large.sh  medium.sh  small.sh
thehopper/parralel/PA2/etc/VectorBuilds/2_threads/: large.sh  medium.sh  small.sh
thehopper/parralel/PA2/etc/VectorBuilds/4_threads/: large.sh  medium.sh  small.sh
thehopper/parralel/PA2/etc/VectorBuilds/8_threads/: large.sh  medium.sh  small.sh
thehopper/parralel/PA2/include/: fib.h  matrix.h  pi_funcs.h  pi_leibniz.h  pi_mc.h  utilities.h
thehopper/parralel/PA2/python/: FASTMATRIX.cpp  calculate_size.py  generate_matrix.py  generate_vector.py  parse_mm_timings.ipynb  speedup-figures.ipynb  time_script.py
thehopper/parralel/PA2/slurms/: DisplayLogResults.sh  fib.slurm  matrix_mul.slurm  matrix_vect_mul.slurm  openmp_test.slurm  pi_leibniz.slurm  pi_mc.slurm
thehopper/parralel/PA2/src/: fib.cpp  fib_driver.cpp  matrix_mul_driver.cpp  matrix_mul_driver_tester.cpp  matrix_vector_mul_driver.cpp  matrix_vector_mul_driver_tester.cpp  pi_leibniz.cpp  pi_leibniz_driver.cpp  pi_mc.cpp  pi_mc_driver.cpp  utilities.cpp
thehopper/parralel/PA2/tests/: Fibtest.cpp  MatrixMultiplyTests.cpp  PiTests.cpp
thehopper/parralel/PA2/tests/test_files/Matrices/: 3x3_1_Solution  4X4_1_Solution  4x4_2_Solution  mm2_4x4  mm2_5x5  mm3_3x3  mm5_100x100  mm5_10x10  mm_10  mm_20  mm_200  mm_240_SMALL  mm_4  mm_5  mv_small
thehopper/parralel/PA2/tests/test_files/Vectors/: 10_1_solution  3_1_Solution  3_2_Solution  4_1_Solution  4_2_Solution  5_2_Solution  v_1000  v_large  v_medium  v_small
thehopper/parralel/PA3/: CMakeLists.txt  README.md  buildProject.sh
thehopper/parralel/PA3/etc/: mm  mm.cpp  mv.cpp  mv.slurm  pi_leibniz.cpp  pi_mc.cpp
thehopper/parralel/PA3/include/: cannon.h  pi_leibniz.h  pi_mc.h  utilities.h
thehopper/parralel/PA3/python/: cannon_speedup.ipynb  mm_mv_speed.ipynb  pi_speedup.ipynb
thehopper/parralel/PA3/slurms/: DisplayLogResults.sh  cannons.slurm  matrix_mul.slurm  matrix_vect_mul.slurm  mpi_matrix_vect_mul.slurm  mpi_mm.slurm  mpi_test.slurm  pi_leibniz.slurm  pi_mc.slurm
thehopper/parralel/PA3/src/: cannon.cpp  cannon_driver.cpp  mpi_hello_driver.cpp  mpi_mat_mul_driver.cpp  mpi_mat_vector_mul_driver.cpp  pi_leibniz.cpp  pi_leibniz_driver.cpp  pi_mc.cpp  pi_mc_driver.cpp  utilities.cpp
thehopper/parralel/PA3/temp/: l.cpp  le.cpp  mc_pi.cpp  pi_leibniz.cpp  pi_mc.cpp  slurm_pi.slurm
thehopper/parralel/PA3/tests/: MatrixMultiplyTests.cpp  MatrixVectorMultiplyTests.cpp  PiTests.cpp
thehopper/parralel/PA3/tests/test_files/Matrices/: 3x3_2_Solution  5x5_1_Solution  mm2_3x3  mm4_4x4  mm_100  mm_1000  mm_200x200  mm_50  mm_500  mm_550x550  mm_Small
thehopper/parralel/PA3/tests/test_files/Vectors/: v_20  v_50  v_500
(+31 files in other folders)
